Infrastructure/Kubernetes/sqlserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: expensetracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: data
              mountPath: /var/opt/mssql
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mssql-data
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: expensetracker
spec:
  selector:
    app: sqlserver
  ports:
    - port: 1433
      targetPort: 1433
